Racket list/cons

--- a/education.tex
+++ b/education.tex
@@ -325,6 +325,9 @@ map f l =
 \end{frame}
 
 
+\imageslide[0.7]{list-cons-racket.png}
+
+
 \imageslide[1.3]{pushout1.pdf}
 \imageslide[1.3]{pushout2.pdf}
 
