--- a/education.tex
+++ b/education.tex
@@ -164,6 +164,19 @@ Data61/CSIRO\\
 
 
 \begin{frame}
+\LARGE \centering
+University\\
+First year, first semester
+\end{frame}
+
+
+\begin{frame}
+\LARGE \centering
+Which language?
+\end{frame}
+
+
+\begin{frame}
 \centering
 \begin{tabular}{|l|l|}
 \hline
@@ -246,18 +259,76 @@ Evaluation by substitution
 
 
 \begin{frame}
+
 \begin{center}
-Incredible breadth of content
-\begin{itemize}
-\item recursion
-\item complexity analysis
-\item meta-linguistic abstraction
-\item interpreters
-\item object-oriented programming
-\item logic programming
-\item many other things
-\end{itemize}
+{\bf Incredible breadth of content}
 \end{center}
+%\begin{center} recursion \end{center}
+\begin{center} complexity analysis \end{center}
+\begin{center} symbolic computation with quotation \end{center}
+%\begin{center} meta-linguistic abstraction \end{center}
+\begin{center} interpreters \end{center}
+\begin{center} object-oriented programming \end{center}
+\begin{center} logic programming \end{center}
+\begin{center} many other concepts \end{center}
+\end{frame}
+
+
+\begin{frame}[fragile]
+
+\begin{center}
+{\bf Criticisms}
+\end{center}
+\begin{center}
+Examples are drawn from overly-technical domains
+
+\nl
+
+{\scriptsize
+\begin{schemecode}
+(define (deriv exp var)
+  (cond ((number? exp) 0)
+        ((variable? exp)
+         (if (same-variable? exp var) 1 0))
+        ((sum? exp)
+         (make-sum (deriv (addend exp) var)
+                   (deriv (augend exp) var)))
+        ((product? exp)
+         (make-sum
+           (make-product (multiplier exp)
+                         (deriv (multiplicand exp) var))
+           (make-product (deriv (multiplier exp) var)
+                         (multiplicand exp))))
+        (else
+         (error "unknown expression type -- DERIV" exp))))
+\end{schemecode}
+}
+\end{center}
+% TODO maybe improve this
+\end{frame}
+
+
+\begin{frame}
+
+\begin{center}
+{\bf Criticisms}
+\end{center}
+\begin{center}
+Lacks treatment of foundational problem-solving techniques
+\end{center}
+
+\begin{block}{}
+From an educational point of view, our experience suggests that undergraduate computer
+science courses should emphasize basic notions of modularity, specification, and
+data abstraction, and should not let these be displaced by more advanced topics,
+such as design patterns, object-oriented methods, concurrency, functional languages,
+and so on.
+
+\nl
+
+--- Jackson and Chapin, 2000
+\end{block}
+% TODO maybe improve the above typesetting
 \end{frame}
 
 
