--- a/education.tex
+++ b/education.tex
@@ -331,8 +331,21 @@ and so on.
 % TODO maybe improve the above typesetting
 \end{frame}
 
-
+%%%%% HTDP
 \imageslide[0.5]{htdp-cover.png}
+
+
+% \begin{frame}
+
+% Also uses Scheme - with a staged introduction and helpful error messages
+
+% uses simpler examples
+
+% focuses on techniques for breaking down problems and composing solutions
+
+% comes with its own IDE
+% \end{frame}
+
 
 %%%%% Wadler
 \begin{frame}
