--- a/education.tex
+++ b/education.tex
@@ -347,6 +347,14 @@ and so on.
 % \end{frame}
 
 
+% TODO IDE screenshots - staged approach
+
+
+% TODO design recipe screenshots
+
+
+% TODO paper screenshots about how you are sort of expected to learn programming along the way
+
 %%%%% Wadler
 \begin{frame}
 \centering
@@ -360,7 +368,45 @@ and so on.
 % TODO highlight bits?
 \end{frame}
 
+\begin{frame}[fragile]
+\begin{haskellcode}
+perimeter shape = case shape of
+  Square s      -> s * 4
+  Rectangle w h -> 2*w + 2*h
+  Circle r      -> 2 * pi * r
+\end{haskellcode}
+\end{frame}
 
+
+\begin{frame}[fragile]
+\begin{schemecode}
+(define (sum items)
+  (cond ((null? items) 0)
+        (else (+ (car items) (sum (cdr items))))))
+\end{schemecode}
+
+\pnl
+
+\begin{haskellcode}
+sum items = case items of
+  []   -> 0
+  x:xs -> x + sum xs
+\end{haskellcode}
+\end{frame}
+
+
+\begin{frame}[fragile]
+\begin{haskellcode}
+[] ++ ys      =  ys
+(x:xs) ++ ys  =  x:(xs ++ ys)
+\end{haskellcode}
+
+\begin{haskellcode}
+(xs ++ ys) ++ zs = xs ++ (ys ++ zs)
+\end{haskellcode}
+\end{frame}
+
+\iffalse
 \begin{frame}[fragile]
 \begin{schemecode}
 (define (map proc items)
@@ -410,10 +456,65 @@ map f l =
 
 
 \imageslide[0.7]{list-cons-racket.png}
+\fi
 
 
 \imageslide[1.3]{pushout1.pdf}
 \imageslide[1.3]{pushout2.pdf}
+
+
+% TODO Haskell For Mac screenshot
+
+
+\begin{frame}[fragile]
+
+\Large
+\begin{texttt}
+3 + False
+\end{texttt}
+\nl
+
+\large
+\begin{block}{}
+\begin{Verbatim}
+<interactive>:1:1: error:
+    • No instance for (Num Bool) arising from a use of ‘+’
+    • In the expression: 3 + False
+      In an equation for ‘it’: it = 3 + False
+\end{Verbatim}
+\end{block}
+\end{frame}
+
+
+\begin{frame}[fragile]
+
+\begin{block}{Prelude.hs}
+\begin{haskellcode}
+module Prelude
+  ( N.Integer, (+)
+  , (==), Bool (..)
+  )
+where
+
+import Data.Bool (Bool (..))
+import qualified Data.Eq as E
+import GHC.Num (Integer)
+import qualified GHC.Num as N
+
+(+) :: Integer -> Integer -> Integer
+(+) = (N.+)
+
+(==) :: Integer -> Integer -> Bool
+(==) = (E.==)
+\end{haskellcode}
+\end{block}
+\end{frame}
+
+
+% TODO talk about custom type error machinery
+
+
+% TODO Helium?
 
 
 \begin{frame}
