--- a/education.tex
+++ b/education.tex
@@ -178,7 +178,7 @@ Which language?
 
 
 \begin{frame}[fragile]
-\Large
+\large
 \begin{javacode}
 class Hello {
 
@@ -190,366 +190,14 @@ class Hello {
 \end{javacode}
 \end{frame}
 
-\begin{frame}
-\centering
-\begin{tabular}{|l|l|}
-\hline
-       & Content \\
-\hline\hline
-Week 1 & Basic expressions  \\
-\hline
-Week 2 & procedure declarations \\
-\hline
-Week 3 & if-statement \\
-\hline
-Week 4 & while-statement \\
-\hline
-Week 5 & for-statement \\
-\hline
-\ldots & \\
-\end{tabular}
-\end{frame}
 
+\input{sicp.tex}
 
-%%%%% SICP
-\begin{frame}
-\centering
-\includegraphics{sicp.jpg}
-\end{frame}
+\input{wadler.tex}
 
+\input{htdp.tex}
 
-\begin{frame}[fragile]
-\begin{schemecode}
-(define (factorial n)
-  (if (<= n 1)
-      1
-      (* n (factorial (- n 1)))))
-\end{schemecode}
-\end{frame}
-
-
-\iffalse
-\begin{frame}[fragile]
-\begin{schemecode}
-(define (map proc items)
-  (if (null? items)
-      nil
-      (cons (proc (car items))
-            (map proc (cdr items)))))
-\end{schemecode}
-\end{frame}
-
-
-\begin{frame}[fragile]
-\begin{schemecode}
-(define (abs x)
-  (cond ((> x 0) x)
-        ((= x 0) x)
-        ((< x 0) (- x))))
-\end{schemecode}
-\end{frame}
-\fi
-
-
-\begin{frame}[fragile]
-Evaluation by substitution
-
-\begin{schemecode}
-(define (sum-of-squares x y)
-  (+ (sqr x) (sqr y)))
-\end{schemecode}
-
-\nl
-\hrule
-\pnl
-
-\begin{schemecode}
-     (sum-of-squares 3 4)
-\end{schemecode}
-\pause
-\begin{schemecode}
-=>   (+ (sqr 3) (sqr 4))
-\end{schemecode}
-\pause
-\begin{schemecode}
-=>   (+ (* 3 3) (sqr 4))
-\end{schemecode}
-\pause
-\begin{schemecode}
-=>   (+ 9 (sqr 4))
-\end{schemecode}
-\pause
-\begin{schemecode}
-=>   (+ 9 (* 4 4))
-\end{schemecode}
-\pause
-\begin{schemecode}
-=>   (+ 9 16)
-\end{schemecode}
-\pause
-\begin{schemecode}
-=>   25
-\end{schemecode}
-\end{frame}
-
-
-\begin{frame}
-\centering
-\includegraphics[scale=0.8]{sicp-factorial.png}
-\end{frame}
-
-
-\begin{frame}
-
-\begin{center}
-{\bf Incredible breadth of content}
-\end{center}
-%\begin{center} recursion \end{center}
-\begin{center} complexity analysis \end{center}
-\begin{center} symbolic computation with quotation \end{center}
-%\begin{center} meta-linguistic abstraction \end{center}
-\begin{center} interpreters \end{center}
-\begin{center} object-oriented programming \end{center}
-\begin{center} logic programming \end{center}
-\begin{center} many other concepts \end{center}
-\end{frame}
-
-
-\begin{frame}[fragile]
-
-\begin{center}
-{\bf Criticisms}
-\end{center}
-\begin{center}
-Examples are drawn from overly-technical domains
-
-\nl
-
-{\scriptsize
-\begin{schemecode}
-(define (deriv exp var)
-  (cond ((number? exp) 0)
-        ((variable? exp)
-         (if (same-variable? exp var) 1 0))
-        ((sum? exp)
-         (make-sum (deriv (addend exp) var)
-                   (deriv (augend exp) var)))
-        ((product? exp)
-         (make-sum
-           (make-product (multiplier exp)
-                         (deriv (multiplicand exp) var))
-           (make-product (deriv (multiplier exp) var)
-                         (multiplicand exp))))
-        (else
-         (error "unknown expression type -- DERIV" exp))))
-\end{schemecode}
-}
-\end{center}
-% TODO maybe improve this
-\end{frame}
-
-
-\begin{frame}
-
-\begin{center}
-{\bf Criticisms}
-\end{center}
-\begin{center}
-Lacking coverage of foundational problem-solving techniques
-\end{center}
-
-\begin{block}{}
-From an educational point of view, our experience suggests that undergraduate \\
-computer science courses \highlight{should emphasize basic notions of modularity, specification, and}
-\highlight{data abstraction}, and should not let these be displaced by more advanced topics,
-such as design patterns, object-oriented methods, concurrency, functional languages,
-and so on.
-
-\nl
-
---- Jackson and Chapin, 2000
-(emphasis mine)
-\end{block}
-\end{frame}
-
-%%%%% HTDP
-\imageslide[0.5]{htdp-cover.png}
-
-\imageslide[0.55]{expected-four-args.png}
-
-\imageslide[0.6]{language-levels.png}
-
-\imageslide[0.5]{design-recipe.png}
-
-
-% TODO paper screenshots about how you are sort of expected to learn programming along the way
-
-%%%%% Wadler
-\begin{frame}
-\centering
-\includegraphics[scale=0.5]{wadler-title.png}
-\end{frame}
-
-
-\begin{frame}
-\centering
-\includegraphics[scale=0.55]{wadler-abstract.png}
-% TODO highlight bits?
-\end{frame}
-
-\begin{frame}[fragile]
-\begin{haskellcode}
-perimeter shape =
-  case shape of
-    Square s      -> s * 4
-    Rectangle w h -> 2*w + 2*h
-    Circle r      -> 2 * pi * r
-\end{haskellcode}
-\end{frame}
-
-
-\begin{frame}[fragile]
-\begin{schemecode}
-(define (sum items)
-  (cond ((null? items) 0)
-        (else (+ (car items) (sum (cdr items))))))
-\end{schemecode}
-
-\pnl
-
-\begin{haskellcode}
-sum items = case items of
-  []   -> 0
-  x:xs -> x + sum xs
-\end{haskellcode}
-\end{frame}
-
-
-\begin{frame}[fragile]
-\begin{haskellcode}
-[] ++ ys      =  ys
-(x:xs) ++ ys  =  x:(xs ++ ys)
-\end{haskellcode}
-
-\begin{haskellcode}
-(xs ++ ys) ++ zs = xs ++ (ys ++ zs)
-\end{haskellcode}
-\end{frame}
-
-\iffalse
-\begin{frame}[fragile]
-\begin{schemecode}
-(define (map proc items)
-  (if (null? items)
-      nil
-      (cons (proc (car items))
-            (map proc (cdr items)))))
-\end{schemecode}
-\nl
-
-\begin{haskellcode}
-map :: (a -> b) -> [a] -> [b]
-map f l =
-  case l of
-    []       -> []
-    (x : xs) -> f x : map f xs
-\end{haskellcode}
-\end{frame}
-
-
-\begin{frame}[fragile]
-\LARGE
-\begin{schemecode}
-             (list 3 4)
-
-             (cons 3 4)
-\end{schemecode}
-\end{frame}
-
-
-\begin{frame}[fragile]
-\begin{columns}[T]
-\LARGE
-\column{0.5\textwidth}
-\begin{schemecode}
-  (cons 3 4)
-\end{schemecode}
-\includegraphics{list-cons1.pdf}
-
-\column{0.5\textwidth}
-\begin{schemecode}
-  (list 3 4)
-\end{schemecode}
-\includegraphics{list-cons2.pdf}
-\end{columns}
-\end{frame}
-
-
-\imageslide[0.7]{list-cons-racket.png}
-\fi
-
-
-\imageslide[1.3]{pushout1.pdf}
-\imageslide[1.3]{pushout2.pdf}
-
-\begin{frame}
-
-haskell for mac screenshot
-% TODO
-\end{frame}
-
-
-\begin{frame}[fragile]
-
-\Large
-\begin{texttt}
-3 + False
-\end{texttt}
-\nl
-
-\large
-\begin{block}{}
-\begin{Verbatim}
-<interactive>:1:1: error:
-    • No instance for (Num Bool) arising from a use of ‘+’
-    • In the expression: 3 + False
-      In an equation for ‘it’: it = 3 + False
-\end{Verbatim}
-\end{block}
-\end{frame}
-
-
-\begin{frame}[fragile]
-
-\begin{block}{Prelude.hs}
-\begin{haskellcode}
-module Prelude
-  ( N.Integer, (+)
-  , (==), Bool (..)
-  )
-where
-
-import Data.Bool (Bool (..))
-import qualified Data.Eq as E
-import GHC.Num (Integer)
-import qualified GHC.Num as N
-
-(+) :: Integer -> Integer -> Integer
-(+) = (N.+)
-
-(==) :: Integer -> Integer -> Bool
-(==) = (E.==)
-\end{haskellcode}
-\end{block}
-\end{frame}
-
-\begin{frame}
-
-custom type error machinery in GHC
-
-Helium?
-% TODO
-\end{frame}
+\input{now.tex}
 
 
 \begin{frame}
