--- a/htdp.tex
+++ b/htdp.tex
@@ -1,5 +1,12 @@
 %%%%% HTDP
 
+\begin{frame}
+
+\Large \centering
+others criticised the content
+\end{frame}
+
+
 \begin{frame}[fragile]
 
 \begin{center}
@@ -65,6 +72,10 @@ and so on.
 \imageslide[0.6]{language-levels.png}
 
 \imageslide[0.5]{design-recipe.png}
+
+\imageslide[0.6]{look-up-docs.png}
+
+\imageslide[0.6]{incorrect-arguments.png}
 
 
 % TODO paper screenshots about how you are sort of expected to learn programming along the way
