--- a/wadler.tex
+++ b/wadler.tex
@@ -5,12 +5,22 @@
 \end{frame}
 
 
+% \begin{frame}
+% \centering
+% \includegraphics[scale=0.55]{wadler-abstract.png}
+% % TODO highlight bits?
+% \end{frame}
+
 \begin{frame}
 \centering
-\includegraphics[scale=0.55]{wadler-abstract.png}
-% TODO highlight bits?
+\haskelllogo[scale=1.5]
+
+\nl
+(or similar)
 \end{frame}
 
+
+\iffalse
 \begin{frame}[fragile]
 \begin{haskellcode}
 perimeter shape =
@@ -18,6 +28,15 @@ perimeter shape =
     Square s      -> s * 4
     Rectangle w h -> 2*w + 2*h
     Circle r      -> 2 * pi * r
+\end{haskellcode}
+\end{frame}
+\fi
+
+\begin{frame}[fragile]
+\begin{haskellcode}
+data List a
+  = Nil
+  | Cons a (List a)
 \end{haskellcode}
 \end{frame}
 
@@ -29,16 +48,38 @@ perimeter shape =
         (else (+ (car items) (sum (cdr items))))))
 \end{schemecode}
 
+\nl
+\hrule
 \pnl
 
 \begin{haskellcode}
 sum items = case items of
-  []   -> 0
-  x:xs -> x + sum xs
+  Nil       -> 0
+  Cons x xs -> x + sum xs
 \end{haskellcode}
 \end{frame}
 
 
+\begin{frame}[fragile]
+
+\begin{schemecode}
+(define (new-if predicate then-clause else-clause)
+  (cond (predicate then-clause)
+        (else else-clause)))
+\end{schemecode}
+
+\nl
+\hrule
+\pnl
+
+\begin{haskellcode}
+newIf True  t f = t
+newIf False t f = f
+\end{haskellcode}
+\end{frame}
+
+
+\iffalse
 \begin{frame}[fragile]
 \begin{haskellcode}
 [] ++ ys      =  ys
@@ -50,7 +91,7 @@ sum items = case items of
 \end{haskellcode}
 \end{frame}
 
-\iffalse
+
 \begin{frame}[fragile]
 \begin{schemecode}
 (define (map proc items)
