--- a/htdp.tex
+++ b/htdp.tex
@@ -71,11 +71,12 @@ and so on.
 
 \imageslide[0.6]{language-levels.png}
 
-\imageslide[0.5]{design-recipe.png}
+\imageslide[0.6]{cons-3-4.png}
 
 \imageslide[0.6]{look-up-docs.png}
 
 \imageslide[0.6]{incorrect-arguments.png}
 
+\imageslide[0.5]{design-recipe.png}
 
 % TODO paper screenshots about how you are sort of expected to learn programming along the way
