--- a/now.tex
+++ b/now.tex
@@ -1,11 +1,11 @@
 \imageslide[1.3]{pushout1.pdf}
 \imageslide[1.3]{pushout2.pdf}
 
-\begin{frame}
+% \begin{frame}
 
-haskell for mac screenshot
-% TODO
-\end{frame}
+% haskell for mac screenshot
+% % TODO
+% \end{frame}
 
 
 \begin{frame}[fragile]
@@ -50,6 +50,8 @@ import qualified GHC.Num as N
 \imageslide[0.5]{helium.png}
 
 \begin{frame}
+
+{\bf placeholder slide}
 
 custom type error machinery in GHC
 
