--- a/education.tex
+++ b/education.tex
@@ -142,7 +142,7 @@
 %----------------------------------------------------------------------------------------
 
 \title[Education]{Functional Programming in Education}
-\titlegraphic{\includegraphics[scale=0.2]{data61.eps}}
+\titlegraphic{\includegraphics[scale=0.2]{data61.pdf}}
 \author{George Wilson}
 \institute[]
 {
@@ -152,7 +152,7 @@ Data61/CSIRO\\
 }
 
 \selectlanguage{UKenglish}
-\date{\printdate{2018-05-22}}
+\date{\printdate{2018-05-15}}
 
 \begin{document}
 
@@ -199,6 +199,13 @@ class Hello {
 \input{htdp.tex}
 
 \input{now.tex}
+
+
+\begin{frame}
+
+\centering
+A brief personal anecdote\ldots
+\end{frame}
 
 
 \begin{frame}
