--- a/htdp.tex
+++ b/htdp.tex
@@ -1,10 +1,7 @@
 %%%%% HTDP
 
-\begin{frame}
 
-\Large \centering
-others criticised the content
-\end{frame}
+\imageslide[0.4]{sicsc.png}
 
 
 \begin{frame}[fragile]
@@ -67,9 +64,9 @@ and so on.
 
 \imageslide[0.5]{htdp-cover.png}
 
-\imageslide[0.55]{expected-four-args.png}
-
 \imageslide[0.6]{language-levels.png}
+
+\imageslide[0.55]{expected-four-args.png}
 
 \imageslide[0.6]{cons-3-4.png}
 
