--- a/education.tex
+++ b/education.tex
@@ -214,19 +214,26 @@ Thanks for listening!
 \end{frame}
 
 
-%\begin{frame}
-%\frametitle{Attributions}
-%\begin{itemize}
-%\item
-%  Structure and Interpretation of Computer Programs \\
-%  Harold Abelson and Gerald Jay Sussman with Julie Sussman \\
-%  Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)
-%\item
-%  How to Design Programs \\
-%  Matthias Felleisen, Robert Bruce Findler, Matthew Flatt, Shriram Krishnamurthi \\
-%  Attribution-NonCommercial-NoDerivs 2.0 Generic (CC BY-NC-ND 2.0)
-%\end{itemize}
-%\end{frame}
+\begin{frame}
+\frametitle{References}
+\begin{itemize}
+\item
+  Structure and Interpretation of Computer Programs \\
+  Harold Abelson and Gerald Jay Sussman with Julie Sussman
+\item
+  A Critique of Abelson and Sussman \\
+  Philip Wadler
+\item
+  The Structure and Interpretation of the Computer Science Curriculum \\
+  Matthias Felleisen, Robert Bruce Findler, Matthew Flatt, Shriram Krishnamurthi
+\item
+  How to Design Programs \\
+  Matthias Felleisen, Robert Bruce Findler, Matthew Flatt, Shriram Krishnamurthi
+\item
+  The Risks and Benefits of Teaching Purely Functional Programming in First Year \\
+  Manuel Chakravarty and Gabriele Keller
+\end{itemize}
+\end{frame}
 
 
 \end{document}
