--- a/now.tex
+++ b/now.tex
@@ -8,8 +8,8 @@
 % \end{frame}
 
 
-\imageslide[0.4]{language-choice-paper-title.png}
-\imageslide[0.5]{language-choice-fig3-red-box.png}
+% \imageslide[0.4]{language-choice-paper-title.png}
+% \imageslide[0.5]{language-choice-fig3-red-box.png}
 
 
 \begin{frame}[fragile]
@@ -84,7 +84,7 @@ Custom preludes for a staged introduction
 \begin{block}{Prelude.hs}
 \begin{haskellcode}
 module Prelude
-  ( N.Integer, (+)
+  ( Integer, (+)
   )
 where
 
