--- a/education.tex
+++ b/education.tex
@@ -152,7 +152,7 @@ Data61/CSIRO\\
 }
 
 \selectlanguage{UKenglish}
-\date{\printdate{2018-05-15}}
+\date{\printdate{2019-05-15}}
 
 \begin{document}
 
@@ -203,6 +203,7 @@ class Hello {
 
 \begin{frame}
 
+\large
 \centering
 A brief personal anecdote\ldots
 \end{frame}
